@@ -6,7 +6,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="type"/>
     <field name="product"/>
     <field name="account"/>
-    <field name="description"/>
     <field name="quantity"/>
     <field name="unit"/>
     <field name="unit_price"/>
